--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,16 @@ input {
 .listitem {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding: 10px 10px 10px 0px;
   margin: 10px 0 10px 0;
   border-bottom: 1px solid blue;
+}
+
+#buttons {
+  display: flex;
+  gap: 1em;
+}
+
+h3{
+  border-bottom: 1px solid white;
 }
